@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Add printf() like variant to StringBuffer module.
+  common/stringbuffer.c
+  include/stringbuffer.h
+Andreas Kirschbaum 2008-02-07
+
 Fix for bug #1882265: Server failure when all exp_table entries commented out.
  common/exp.c: exit() in case of errors.
 Nicolas Weeger, 2008-02-01
